deps/crates/vendor/zerocopy-derive/tests/ui/privacy.msrv.stderr
error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:105:9
    |
105 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:112:9
    |
112 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:121:9
    |
121 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:128:9
    |
128 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:135:52
    |
135 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type =
    |                                                    ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:138:52
    |
138 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type =
    |                                                    ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:145:51
    |
145 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:148:51
    |
148 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> $DIR/privacy.rs:152:51
    |
152 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:31:13
   |
31 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:37:13
   |
37 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:50:13
   |
50 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:56:13
   |
56 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:70:56
   |
70 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:72:56
   |
72 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type = 0u16;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:85:55
   |
85 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:87:55
   |
87 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type = 0u16;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> $DIR/privacy.rs:90:55
   |
90 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0747`.
